fix weird transition shift in course-prompt

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -170,13 +170,12 @@
         
       #course-alert
         float left
-        width 20px
-        height 20px
         padding 5px
 
       #notification
         height 25px
         margin-top 5px
+        margin-bottom 5px
         vertical-align middle
         font-size 1em
         color white
